<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#ffffff"
    tools:context=".DetalleJugador">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/imagenDetalle"
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="150dp"/>


        <TextView
            android:id="@+id/informacionDetalle"
            android:text="@string/InformacionDetalle"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/nombreDetalle"
            android:text="@string/nombreDetalle"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/correoDetalle"
            android:text="@string/correoDetalle"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/nivelDetalle"
            android:text="@string/nivelDetalle"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/universidadDetalle"
            android:text="@string/universidadDetalle"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/semestreDetalle"
            android:text="@string/semestreDetalle"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>