<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoequipofinal"
    tools:context=".Ingreso">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/correoRegistrado"
                android:hint="@string/correoRegistrado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            >

            <EditText
                android:id="@+id/claveRegistrada"
                android:hint="@string/claveRegistrada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/ingreso"
            android:text="@string/ingreso"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Button>

        <TextView
            android:id="@+id/recuperarcontraseña"
            android:text="Olvidaste tu contraseña?"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:textAlignment="center"
            android:layout_gravity="center"/>


        <com.google.android.gms.common.SignInButton
            android:id="@+id/ingresoGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

        </com.google.android.gms.common.SignInButton>

    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>